[workspace]
members = ["crates/*"]
resolver = "3"

[workspace.package]
version = "0.0.1"
edition = "2024"
authors = ["luxluth <delphin.blehoussi93@gmail.com>"]
description = "eka GUI toolkit"

[workspace.dependencies]
ansi_term =  "0.12.1"
winit = "0.30.12"
env_logger = "0.11.8"
log = "0.4.28"
cosmic-text = "0.15.0"
vulkano-util = "0.35.0"
vulkano = "0.35.2"
vulkano-shaders = "0.35.0"
