[package]
name = "deka"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "eka core gui abstraction"

[dependencies]
cosmic-text = { workspace = true }
winit = { workspace = true }
heka = { path = "../heka/" }

[features]
default = ["debug"]
debug = ["heka/debug"]
