[package]
name = "deka"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "eka core gui abstraction"

[dependencies]
heka = { path = "../heka" }
winit = { workspace = true }
env_logger = { workspace = true }
log = { workspace = true }
cosmic-text = { workspace = true }
vulkano-util = { workspace = true }
vulkano = { workspace = true }
vulkano-shaders = { workspace = true }

[features]
default = ["debug"]
debug = ["heka/debug"]
